--- a/src/views/result.html
+++ b/src/views/result.html
@@ -7,11 +7,11 @@
 <body>
 <div>
     <span>地区：</span>
-    <span>area</span><br><br>
+    <span><%= area %></span><br><br>
     <span>性别：</span>
-    <span>sex</span><br><br>
+    <span><%= sex %></span><br><br>
     <span>出生日期：</span>
-    <span>birthday</span>
+    <span><%= birthday %></span>
 </div>
 </body>
 </html>
